Small fix for the missing css - files and overflow: hidden - glitch
Fixed the overflow: hidden glitch by adding position: relative to the .wrapper - div at MediaQuery (max-width:1024px).

--- a/main.css
+++ b/main.css
@@ -749,6 +749,12 @@ footer{
                 line-height: 1.05;
             }
 
+            /* Sanni */
+            .wrapper {
+                position: relative;
+                overflow-x: hidden;
+            }
+
             .background-box{
                 z-index: -1000;
                 position: absolute;
